kubernetes/apps/web/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
